--- a/main.html
+++ b/main.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*"/></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*"/></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*"/></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*"/></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*"/></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*"/></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*"/></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*"/></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*"/></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*" /></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*" /></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*" /></div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*" /></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*" /></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*" /></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*" /></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*" /></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*" /></div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*" /></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*" /></div>
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*" /></div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4"><img width="200px" src="https://hips.hearstapps.com/hmg-prod/images/spider-man-1627065947.jpeg?crop=0.5625xw:1xh;center,top&resize=1200:*" /></div>
+  </div>
+</div>
 </body>
-
 </html>
